# phantom

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  init: Phantom Engine v0.1.0  install.sh  prometheus.yml
.github/workflows/: ci.yml
crates/phantom-anti-detect/: Cargo.toml
crates/phantom-anti-detect/src/: action.rs  canvas.rs  lib.rs  persona.rs  shims.rs
crates/phantom-anti-detect/tests/: integration_test.rs
crates/phantom-core/: Cargo.toml
crates/phantom-core/src/: errors.rs  lib.rs
crates/phantom-core/src/css/: mod.rs
crates/phantom-core/src/dom/: mod.rs
crates/phantom-core/src/layout/: mod.rs
crates/phantom-core/src/parser/: mod.rs
crates/phantom-core/src/pipeline/: mod.rs
crates/phantom-core/tests/: layout_test.rs  parser_test.rs
crates/phantom-js/: Cargo.toml
crates/phantom-js/src/: lib.rs  processor.rs
crates/phantom-js/src/quickjs/: mod.rs  runtime.rs
crates/phantom-js/src/quickjs/bindings/: document.rs  element.rs  fetch.rs  location.rs  mod.rs  mutation_observer.rs  navigator.rs  timers.rs
crates/phantom-js/src/shims/: mod.rs
crates/phantom-js/src/v8/: mod.rs
crates/phantom-js/tests/: js_test.rs
crates/phantom-mcp/: Cargo.toml
crates/phantom-mcp/src/: auth.rs  dispatcher.rs  errors.rs  lib.rs  main.rs  metrics.rs  server.rs
crates/phantom-mcp/src/tools/: interaction.rs  mod.rs  navigation.rs  perception.rs  session.rs  storage.rs  tabs.rs
crates/phantom-mcp/tests/: e2e_test.rs  performance_gates.rs  scale_test.rs  security_audit.rs
crates/phantom-net/: Cargo.toml
crates/phantom-net/src/: lib.rs
crates/phantom-serializer/: Cargo.toml
crates/phantom-serializer/benches/: serializer_bench.rs
crates/phantom-serializer/src/: lib.rs
crates/phantom-serializer/tests/: serializer_test.rs
crates/phantom-session/: Cargo.toml
crates/phantom-session/src/: broker.rs  circuit_breaker.rs  lib.rs  pool.rs  scheduler.rs  types.rs
crates/phantom-session/tests/: scale_test.rs
crates/phantom-storage/: Cargo.toml
crates/phantom-storage/src/: errors.rs  lib.rs  quota_mgr.rs  security.rs  session_mgr.rs  snapshot.rs
crates/phantom-storage/src/providers/: cache.rs  cookie.rs  idb.rs  local.rs  mod.rs
crates/phantom-storage/tests/: integration_test.rs
