[package]
name = "phantom-core"
version = "0.1.0"
edition = "2021"

[dependencies]
html5ever = { workspace = true }
cssparser = { workspace = true }
taffy = { workspace = true }
indextree = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
phantom-net = { path = "../phantom-net" }
