[package]
name = "phantom-net"
version = "0.1.0"
edition = "2021"

[dependencies]
rquest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
backoff = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "http2", "json"] }
